# VerificaAI

./: .gitignore  README.MD  README.md  reply.js  twitter.js
bot/: reply.js  twitter.js
server/: GEMINI.md  Makefile  database.py  pyproject.toml  server.py
site/: .gitignore  manage.py
site/core/: models.py  urls.py  views.py
site/core/static/core/css/: style.css
site/core/templates/core/: base.html  index.html  noticia_detalhe.html  sobre.html
site/verificai/: asgi.py  settings.py  urls.py  wsgi.py
